# inputtino

./: .dockerignore  CMakeLists.txt
.github/workflows/: docker-build.yml
bindings/rust/: Cargo.toml  build.rs
bindings/rust/src/: common.rs  joypad_switch.rs  joypad_xbox.rs  keyboard.rs  lib.rs  mouse.rs
bindings/rust/tests/: joypad_xbox.rs  joypads.rs  keyboard.rs  mouse.rs
bindings/rust/tests/common/: mod.rs
docker/: web-server.Dockerfile
include/inputtino/: input.hpp
src/c-bindings/: joypad_ps5.cpp
src/server/server/: rest.hpp
src/server/web-client/src/: App.svelte
src/server/web-client/src/lib/: Keyboard.svelte
src/uhid/: joypad_ps5.cpp
src/uhid/include/uhid/: protected_types.hpp  ps5.hpp
src/uinput/: joypad_utils.hpp  mouse.cpp  pentablet.cpp
tests/: testCAPI.cpp  testJoypads.cpp  testLibinput.cpp
