[package]
name = "inputtino"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.72"
links = "libinputtino"

[lib]
name = "inputtino_rs"
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.69.4"
cmake = "0.1"

[dev-dependencies]
input = "0.9.0"
rustix = { version = "0.38.18", features = ["fs"] }
approx = "0.5.1"
