[package]
name = "inputtino"
version = "2024.8.1"
edition = "2021"
license = "MIT"
rust-version = "1.72"
links = "libinputtino"
homepage = "https://github.com/games-on-whales/inputtino"
authors = ["ABeltramo"]
description = "Rust bindings for inputtino"

[lib]
name = "inputtino_rs"
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.69.4"
cmake = "0.1"
pkg-config = "0.3.30"

[dev-dependencies]
input = "0.9.0"
rustix = { version = "0.38.18", features = ["fs"] }
approx = "0.5.1"
sdl2 = "0.37.0"
